samples/_failures_safe/1761377036_0b8da3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7493181f.c: In function ‘main’:
./samples/SAFE/__tmp_7493181f.c:182:63: error: expected ‘)’ at end of input
  182 |     process_compression(compressors[choice - 1], decompressors
      |                        ~                                      ^
      |                                                               )
./samples/SAFE/__tmp_7493181f.c:182:5: error: expected declaration or statement at end of input
  182 |     process_compression(compressors[choice - 1], decompressors
      |     ^~~~~~~~~~~~~~~~~~~
